6cem/Translation_Methods/lab02/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> consts
Rule 1     consts -> CONST IDENTIFIER EQUALITY NUMBER SEMICOLON begin_program
Rule 2     consts -> CONST IDENTIFIER EQUALITY STRING SEMICOLON begin_program
Rule 3     consts -> CONST IDENTIFIER EQUALITY matrix SEMICOLON begin_program
Rule 4     consts -> begin_program
Rule 5     matrix -> OPEN_SQUARE_BRACKET identifiers CLOSE_SQUARE_BRACKET
Rule 6     identifiers -> IDENTIFIER ZAPYATAYA identifiers
Rule 7     identifiers -> NUMBER ZAPYATAYA identifiers
Rule 8     identifiers -> STRING ZAPYATAYA identifiers
Rule 9     identifiers -> IDENTIFIER
Rule 10    identifiers -> NUMBER
Rule 11    identifiers -> STRING
Rule 12    begin_program -> VAR declarations BEGIN body END POINT
Rule 13    block -> BEGIN body END SEMICOLON
Rule 14    body -> expression
Rule 15    identifier -> IDENTIFIER
Rule 16    expression -> assignment expression
Rule 17    expression -> if expression
Rule 18    expression -> function expression
Rule 19    expression -> empty
Rule 20    expression -> while expression
Rule 21    expression -> for expression
Rule 22    expression -> break
Rule 23    break -> BREAK SEMICOLON
Rule 24    declarations -> declaration declarations
Rule 25    declarations -> empty
Rule 26    declaration -> IDENTIFIER another_identifiers COLON type SEMICOLON
Rule 27    another_identifiers -> ZAPYATAYA IDENTIFIER another_identifiers
Rule 28    another_identifiers -> empty
Rule 29    type -> TYPE_STRING
Rule 30    type -> TYPE_INTEGER
Rule 31    type -> TYPE_REAL
Rule 32    empty -> <empty>
Rule 33    assignment -> identifier ASSIGNMENT arithmetic_expression SEMICOLON
Rule 34    assignment -> identifier ASSIGNMENT function SEMICOLON
Rule 35    assignment -> identifier ASSIGNMENT function
Rule 36    assignment -> identifier ASSIGNMENT arithmetic_expression
Rule 37    arithmetic_expression -> NUMBER
Rule 38    arithmetic_expression -> identifier
Rule 39    arithmetic_expression -> STRING
Rule 40    arithmetic_expression -> function
Rule 41    arithmetic_expression -> identifier PLUS arithmetic_expression
Rule 42    arithmetic_expression -> identifier MINUS arithmetic_expression
Rule 43    arithmetic_expression -> identifier MUL arithmetic_expression
Rule 44    arithmetic_expression -> identifier DIV arithmetic_expression
Rule 45    arithmetic_expression -> NUMBER PLUS arithmetic_expression
Rule 46    arithmetic_expression -> NUMBER MINUS arithmetic_expression
Rule 47    arithmetic_expression -> NUMBER MUL arithmetic_expression
Rule 48    arithmetic_expression -> NUMBER DIV arithmetic_expression
Rule 49    arithmetic_expression -> function PLUS arithmetic_expression
Rule 50    arithmetic_expression -> function MINUS arithmetic_expression
Rule 51    arithmetic_expression -> function MUL arithmetic_expression
Rule 52    arithmetic_expression -> function DIV arithmetic_expression
Rule 53    arithmetic_expression -> identifier OPEN_SQUARE_BRACKET arithmetic_expression CLOSE_SQUARE_BRACKET
Rule 54    arithmetic_expression -> arithmetic_expression PLUS arithmetic_expression
Rule 55    arithmetic_expression -> arithmetic_expression MINUS arithmetic_expression
Rule 56    arithmetic_expression -> arithmetic_expression MUL arithmetic_expression
Rule 57    arithmetic_expression -> arithmetic_expression DIV arithmetic_expression
Rule 58    function -> WRITE OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
Rule 59    function -> WRITELN OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
Rule 60    function -> READ OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
Rule 61    function -> READLN OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
Rule 62    function -> LENGTH OPEN_BRACKET identifier CLOSE_BRACKET
Rule 63    function -> INC OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
Rule 64    predicate -> arithmetic_expression COMPARISON arithmetic_expression
Rule 65    predicate -> arithmetic_expression EQUALITY arithmetic_expression
Rule 66    predicate -> arithmetic_expression NON_EQUALITY arithmetic_expression
Rule 67    predicate -> arithmetic_expression NON_STRICT_COMPARISON arithmetic_expression
Rule 68    predicate -> arithmetic_expression IN identifier
Rule 69    predicate -> arithmetic_expression IN matrix
Rule 70    some_predicates -> OPEN_BRACKET predicate CLOSE_BRACKET AND some_predicates
Rule 71    some_predicates -> OPEN_BRACKET predicate CLOSE_BRACKET OR some_predicates
Rule 72    some_predicates -> OPEN_BRACKET predicate CLOSE_BRACKET
Rule 73    some_predicates -> OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET AND some_predicates
Rule 74    some_predicates -> OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET OR some_predicates
Rule 75    some_predicates -> OPEN_BRACKET NOT OPEN_BRACKET predicate CLOSE_BRACKET CLOSE_BRACKET
Rule 76    while -> WHILE OPEN_BRACKET predicate CLOSE_BRACKET DO block
Rule 77    while -> WHILE some_predicates DO block
Rule 78    for -> FOR assignment TO arithmetic_expression DO block
Rule 79    for -> FOR assignment DOWNTO arithmetic_expression DO block
Rule 80    if -> IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block
Rule 81    if -> IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block else
Rule 82    else -> ELSE block

Terminals, with rules where they appear

AND                  : 70 73
ASSIGNMENT           : 33 34 35 36
BEGIN                : 12 13
BREAK                : 23
CLOSE_BRACKET        : 58 59 60 61 62 63 70 71 72 73 73 74 74 75 75 76 80 81
CLOSE_SQUARE_BRACKET : 5 53
COLON                : 26
COMPARISON           : 64
CONST                : 1 2 3
DIV                  : 44 48 52 57
DO                   : 76 77 78 79
DOWNTO               : 79
ELSE                 : 82
END                  : 12 13
EQUALITY             : 1 2 3 65
FOR                  : 78 79
IDENTIFIER           : 1 2 3 6 9 15 26 27
IF                   : 80 81
IN                   : 68 69
INC                  : 63
LENGTH               : 62
MINUS                : 42 46 50 55
MUL                  : 43 47 51 56
NON_EQUALITY         : 66
NON_STRICT_COMPARISON : 67
NOT                  : 73 74 75
NUMBER               : 1 7 10 37 45 46 47 48
OPEN_BRACKET         : 58 59 60 61 62 63 70 71 72 73 73 74 74 75 75 76 80 81
OPEN_SQUARE_BRACKET  : 5 53
OR                   : 71 74
PLUS                 : 41 45 49 54
POINT                : 12
READ                 : 60
READLN               : 61
SEMICOLON            : 1 2 3 13 23 26 33 34 58 59 60 61 63
STRING               : 2 8 11 39
THEN                 : 80 81
TO                   : 78
TYPE_INTEGER         : 30
TYPE_REAL            : 31
TYPE_STRING          : 29
VAR                  : 12
WHILE                : 76 77
WRITE                : 58
WRITELN              : 59
ZAPYATAYA            : 6 7 8 27
error                : 

Nonterminals, with rules where they appear

another_identifiers  : 26 27
arithmetic_expression : 33 36 41 42 43 44 45 46 47 48 49 50 51 52 53 54 54 55 55 56 56 57 57 58 59 64 64 65 65 66 66 67 67 68 69 78 79
assignment           : 16 78 79
begin_program        : 1 2 3 4
block                : 76 77 78 79 80 81 82
body                 : 12 13
break                : 22
consts               : 0
declaration          : 24
declarations         : 12 24
else                 : 81
empty                : 19 25 28
expression           : 14 16 17 18 20 21
for                  : 21
function             : 18 34 35 40 49 50 51 52
identifier           : 33 34 35 36 38 41 42 43 44 53 60 61 62 63 68
identifiers          : 5 6 7 8
if                   : 17
matrix               : 3 69
predicate            : 70 71 72 73 74 75 76 80 81
some_predicates      : 70 71 73 74 77
type                 : 26
while                : 20

Parsing method: LALR

state 0

    (0) S' -> . consts
    (1) consts -> . CONST IDENTIFIER EQUALITY NUMBER SEMICOLON begin_program
    (2) consts -> . CONST IDENTIFIER EQUALITY STRING SEMICOLON begin_program
    (3) consts -> . CONST IDENTIFIER EQUALITY matrix SEMICOLON begin_program
    (4) consts -> . begin_program
    (12) begin_program -> . VAR declarations BEGIN body END POINT

    CONST           shift and go to state 1
    VAR             shift and go to state 4

    begin_program                  shift and go to state 2
    consts                         shift and go to state 3

state 1

    (1) consts -> CONST . IDENTIFIER EQUALITY NUMBER SEMICOLON begin_program
    (2) consts -> CONST . IDENTIFIER EQUALITY STRING SEMICOLON begin_program
    (3) consts -> CONST . IDENTIFIER EQUALITY matrix SEMICOLON begin_program

    IDENTIFIER      shift and go to state 5


state 2

    (4) consts -> begin_program .

    $end            reduce using rule 4 (consts -> begin_program .)


state 3

    (0) S' -> consts .



state 4

    (12) begin_program -> VAR . declarations BEGIN body END POINT
    (24) declarations -> . declaration declarations
    (25) declarations -> . empty
    (26) declaration -> . IDENTIFIER another_identifiers COLON type SEMICOLON
    (32) empty -> .

    IDENTIFIER      shift and go to state 7
    BEGIN           reduce using rule 32 (empty -> .)

    empty                          shift and go to state 6
    declarations                   shift and go to state 9
    declaration                    shift and go to state 8

state 5

    (1) consts -> CONST IDENTIFIER . EQUALITY NUMBER SEMICOLON begin_program
    (2) consts -> CONST IDENTIFIER . EQUALITY STRING SEMICOLON begin_program
    (3) consts -> CONST IDENTIFIER . EQUALITY matrix SEMICOLON begin_program

    EQUALITY        shift and go to state 10


state 6

    (25) declarations -> empty .

    BEGIN           reduce using rule 25 (declarations -> empty .)


state 7

    (26) declaration -> IDENTIFIER . another_identifiers COLON type SEMICOLON
    (27) another_identifiers -> . ZAPYATAYA IDENTIFIER another_identifiers
    (28) another_identifiers -> . empty
    (32) empty -> .

    ZAPYATAYA       shift and go to state 11
    COLON           reduce using rule 32 (empty -> .)

    another_identifiers            shift and go to state 13
    empty                          shift and go to state 12

state 8

    (24) declarations -> declaration . declarations
    (24) declarations -> . declaration declarations
    (25) declarations -> . empty
    (26) declaration -> . IDENTIFIER another_identifiers COLON type SEMICOLON
    (32) empty -> .

    IDENTIFIER      shift and go to state 7
    BEGIN           reduce using rule 32 (empty -> .)

    declarations                   shift and go to state 14
    declaration                    shift and go to state 8
    empty                          shift and go to state 6

state 9

    (12) begin_program -> VAR declarations . BEGIN body END POINT

    BEGIN           shift and go to state 15


state 10

    (1) consts -> CONST IDENTIFIER EQUALITY . NUMBER SEMICOLON begin_program
    (2) consts -> CONST IDENTIFIER EQUALITY . STRING SEMICOLON begin_program
    (3) consts -> CONST IDENTIFIER EQUALITY . matrix SEMICOLON begin_program
    (5) matrix -> . OPEN_SQUARE_BRACKET identifiers CLOSE_SQUARE_BRACKET

    NUMBER          shift and go to state 16
    STRING          shift and go to state 19
    OPEN_SQUARE_BRACKET shift and go to state 17

    matrix                         shift and go to state 18

state 11

    (27) another_identifiers -> ZAPYATAYA . IDENTIFIER another_identifiers

    IDENTIFIER      shift and go to state 20


state 12

    (28) another_identifiers -> empty .

    COLON           reduce using rule 28 (another_identifiers -> empty .)


state 13

    (26) declaration -> IDENTIFIER another_identifiers . COLON type SEMICOLON

    COLON           shift and go to state 21


state 14

    (24) declarations -> declaration declarations .

    BEGIN           reduce using rule 24 (declarations -> declaration declarations .)


state 15

    (12) begin_program -> VAR declarations BEGIN . body END POINT
    (14) body -> . expression
    (16) expression -> . assignment expression
    (17) expression -> . if expression
    (18) expression -> . function expression
    (19) expression -> . empty
    (20) expression -> . while expression
    (21) expression -> . for expression
    (22) expression -> . break
    (33) assignment -> . identifier ASSIGNMENT arithmetic_expression SEMICOLON
    (34) assignment -> . identifier ASSIGNMENT function SEMICOLON
    (35) assignment -> . identifier ASSIGNMENT function
    (36) assignment -> . identifier ASSIGNMENT arithmetic_expression
    (80) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block
    (81) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block else
    (58) function -> . WRITE OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (59) function -> . WRITELN OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (60) function -> . READ OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (61) function -> . READLN OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (62) function -> . LENGTH OPEN_BRACKET identifier CLOSE_BRACKET
    (63) function -> . INC OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (32) empty -> .
    (76) while -> . WHILE OPEN_BRACKET predicate CLOSE_BRACKET DO block
    (77) while -> . WHILE some_predicates DO block
    (78) for -> . FOR assignment TO arithmetic_expression DO block
    (79) for -> . FOR assignment DOWNTO arithmetic_expression DO block
    (23) break -> . BREAK SEMICOLON
    (15) identifier -> . IDENTIFIER

    IF              shift and go to state 25
    WRITE           shift and go to state 41
    WRITELN         shift and go to state 40
    READ            shift and go to state 34
    READLN          shift and go to state 29
    LENGTH          shift and go to state 32
    INC             shift and go to state 23
    END             reduce using rule 32 (empty -> .)
    WHILE           shift and go to state 33
    FOR             shift and go to state 35
    BREAK           shift and go to state 30
    IDENTIFIER      shift and go to state 31

    assignment                     shift and go to state 28
    empty                          shift and go to state 22
    identifier                     shift and go to state 24
    function                       shift and go to state 26
    for                            shift and go to state 27
    break                          shift and go to state 36
    if                             shift and go to state 37
    expression                     shift and go to state 38
    body                           shift and go to state 39
    while                          shift and go to state 42

state 16

    (1) consts -> CONST IDENTIFIER EQUALITY NUMBER . SEMICOLON begin_program

    SEMICOLON       shift and go to state 43


state 17

    (5) matrix -> OPEN_SQUARE_BRACKET . identifiers CLOSE_SQUARE_BRACKET
    (6) identifiers -> . IDENTIFIER ZAPYATAYA identifiers
    (7) identifiers -> . NUMBER ZAPYATAYA identifiers
    (8) identifiers -> . STRING ZAPYATAYA identifiers
    (9) identifiers -> . IDENTIFIER
    (10) identifiers -> . NUMBER
    (11) identifiers -> . STRING

    IDENTIFIER      shift and go to state 44
    NUMBER          shift and go to state 47
    STRING          shift and go to state 45

    identifiers                    shift and go to state 46

state 18

    (3) consts -> CONST IDENTIFIER EQUALITY matrix . SEMICOLON begin_program

    SEMICOLON       shift and go to state 48


state 19

    (2) consts -> CONST IDENTIFIER EQUALITY STRING . SEMICOLON begin_program

    SEMICOLON       shift and go to state 49


state 20

    (27) another_identifiers -> ZAPYATAYA IDENTIFIER . another_identifiers
    (27) another_identifiers -> . ZAPYATAYA IDENTIFIER another_identifiers
    (28) another_identifiers -> . empty
    (32) empty -> .

    ZAPYATAYA       shift and go to state 11
    COLON           reduce using rule 32 (empty -> .)

    another_identifiers            shift and go to state 50
    empty                          shift and go to state 12

state 21

    (26) declaration -> IDENTIFIER another_identifiers COLON . type SEMICOLON
    (29) type -> . TYPE_STRING
    (30) type -> . TYPE_INTEGER
    (31) type -> . TYPE_REAL

    TYPE_STRING     shift and go to state 51
    TYPE_INTEGER    shift and go to state 52
    TYPE_REAL       shift and go to state 53

    type                           shift and go to state 54

state 22

    (19) expression -> empty .

    END             reduce using rule 19 (expression -> empty .)


state 23

    (63) function -> INC . OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON

    OPEN_BRACKET    shift and go to state 55


state 24

    (33) assignment -> identifier . ASSIGNMENT arithmetic_expression SEMICOLON
    (34) assignment -> identifier . ASSIGNMENT function SEMICOLON
    (35) assignment -> identifier . ASSIGNMENT function
    (36) assignment -> identifier . ASSIGNMENT arithmetic_expression

    ASSIGNMENT      shift and go to state 56


state 25

    (80) if -> IF . OPEN_BRACKET predicate CLOSE_BRACKET THEN block
    (81) if -> IF . OPEN_BRACKET predicate CLOSE_BRACKET THEN block else

    OPEN_BRACKET    shift and go to state 57


state 26

    (18) expression -> function . expression
    (16) expression -> . assignment expression
    (17) expression -> . if expression
    (18) expression -> . function expression
    (19) expression -> . empty
    (20) expression -> . while expression
    (21) expression -> . for expression
    (22) expression -> . break
    (33) assignment -> . identifier ASSIGNMENT arithmetic_expression SEMICOLON
    (34) assignment -> . identifier ASSIGNMENT function SEMICOLON
    (35) assignment -> . identifier ASSIGNMENT function
    (36) assignment -> . identifier ASSIGNMENT arithmetic_expression
    (80) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block
    (81) if -> . IF OPEN_BRACKET predicate CLOSE_BRACKET THEN block else
    (58) function -> . WRITE OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (59) function -> . WRITELN OPEN_BRACKET arithmetic_expression CLOSE_BRACKET SEMICOLON
    (60) function -> . READ OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (61) function -> . READLN OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (62) function -> . LENGTH OPEN_BRACKET identifier CLOSE_BRACKET
    (63) function -> . INC OPEN_BRACKET identifier CLOSE_BRACKET SEMICOLON
    (32) empty -> .
    (76) while -> . WHILE OPEN_BRACKET predicate CLOSE_BRACKET DO block
    (77) while -> . WHILE some_predicates DO block
    (78) for -> . FOR assignment TO arithmetic_expression DO block
    (79) for -> . FOR assignment DOWNTO arithmetic_expression DO block
    (23) break -> . BREAK SEMICOLON
    (15) identifier -> . IDENTIFIER

    IF              shift and go to state 25
    WRITE           shift and go to state 41
    WRITELN         shift and go to state 40
    READ            shift and go to state 34
    READLN          shift and go to state 29
    LENGTH          shift and go to state 32
    INC             shift and go to state 23
    END             reduce using rule 32 (empty -> .)
    WHILE           shift and go to state 33
    FOR             shift and go to state 35
    BREAK           shift and go to state 30
    IDENTIFIER      shift and go to state 31

    assignment                     shift and go to state 28
    empty                          shift and go to state 22
    identifier                     shift and go to state 24
    function                       shift and go to state 26
    for                            shift and go to state 27
    break                          shift and go to state 36
    if                             shift and go to state 37
    expression                     shift and go to state 58
    while                          shift and go to state 42

state 27
